--- a/nodedoc/handle/socket.io/index.html
+++ b/nodedoc/handle/socket.io/index.html
@@ -1,21 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>websocket</title>
-        <!-- 手动引入文件可以到node-modules>socket.io-client>dist 找 -->
-        <!-- 官网:https://socket.io/get-started/chat/ -->
-        <script src="./socket.io.js"></script>
+        <title>Socket.IO chat</title>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
+            body {
+                font: 13px Helvetica, Arial;
+            }
+            form {
+                background: #000;
+                padding: 3px;
+                position: fixed;
+                bottom: 0;
+                width: 100%;
+            }
+            form input {
+                border: 0;
+                padding: 10px;
+                width: 90%;
+                margin-right: 0.5%;
+            }
+            form button {
+                width: 9%;
+                background: rgb(130, 224, 255);
+                border: none;
+                padding: 10px;
+            }
+            #messages {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+            }
+            #messages li {
+                padding: 5px 10px;
+            }
+            #messages li:nth-child(odd) {
+                background: #eee;
+            }
+        </style>
     </head>
     <body>
-        <button onclick="senddata()">发送</button>
+        <ul id="messages"></ul>
+        <form action="">
+            <input id="m" autocomplete="off" /><button id="submit">Send</button>
+        </form>
     </body>
+    <!-- 手动引入文件可以到node-modules>socket.io-client>dist 找 -->
+    <!-- 官网:https://socket.io/get-started/chat/ -->
+    <!-- <script src="./socket.io.js"></script> -->
+    <script src="./socket.io.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script>
-        var socket = io.connect("http://192.168.3.18:8088");
-
-        // socket.on("hehe", (msg) => {
-        //     console.log("自定义事件接收数据:" + msg);
-        // });
+        $(function () {
+            var socket = io();
+            $("form").submit(function () {
+                socket.emit("chat message", $("#m").val());
+                $("#m").val("");
+                return false;
+            });
+            socket.on("chat message", function (msg) {
+                $("#messages").append($("<li>").text(msg));
+                window.scrollTo(0, document.body.scrollHeight);
+            });
+        });
     </script>
 </html>
