--- a/nodedoc/handle/websocket/websocket_基础/index.html
+++ b/nodedoc/handle/websocket/websocket_基础/index.html
@@ -9,6 +9,10 @@
         <button onclick="senddata()">发送</button>
     </body>
     <script>
+        /*
+            WebSocket协议是基于TCP的一种网络协议，实现了浏览器与服务器全双工通讯(服务器可主动推送消息到客户端)
+            属于长连接持久的协议(http短连接需要通过轮询才能做到)
+        */
         const ws = new WebSocket("ws://localhost:8080/");
         ws.onopen = function () {
             console.log("服务已连接");
