--- a/nodedoc/model/http/proxy/proxy.html
+++ b/nodedoc/model/http/proxy/proxy.html
@@ -7,12 +7,15 @@
     </head>
     <body></body>
     <script>
+        function getData(data){
+            console.log(data)
+        }
         fetch(
-            "http://localhost:8084/api/vips-mobile/rest/pcoperation/switch/v1?callback=getSwitch1611582452180&app_name=shop_pc&app_version=1&warehouse=VIP_NH&fdc_area_id=103105101&client=pc&mobile_platform=1&province_id=103105&api_key=70f71280d5d547b2a7bb370a529aeea1&user_id=&mars_cid=1611579565351_46431449f9bb78201c070eac53cf56cd&wap_consumer=a&switch_id=444&_=1611582452132"
+            "http://localhost:8084/api/vips-mobile/rest/pcoperation/switch/v1?callback=getData&app_name=shop_pc&app_version=1&warehouse=VIP_NH&fdc_area_id=103105101&client=pc&mobile_platform=1&province_id=103105&api_key=70f71280d5d547b2a7bb370a529aeea1&user_id=&mars_cid=1611579565351_46431449f9bb78201c070eac53cf56cd&wap_consumer=a&switch_id=444&_=1611582452132"
         )
-            .then((response) => response.json())
+            .then((response) => response.text())
             .then((result) => {
-                console.log(result);
+                console.log(eval(result));
             });
     </script>
 </html>
