--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
         <title>Document</title>
     </head>
     <body>
-        fdsfsfs
+        <img src="./readimg.jpg" />
+        555
     </body>
 </html>
