--- a/nodedoc/handle/express/express-router/public/index.html
+++ b/nodedoc/handle/express/express-router/public/index.html
@@ -6,7 +6,9 @@
         <title>Document</title>
     </head>
     <body>
-        <a href="/user/server" class="href">服务端渲染</a>
-        <a href="/user/client" class="href">客户端渲染</a>
+        <a href="/user/server" class="href">服务端渲染</a>-
+        <a href="/user/client" class="href">客户端渲染</a>-
+        <a href="/user/page" class="href">服务端渲染-page</a>-
+        <a href="/user/page_static" class="href">服务端渲染-发布静态网站</a>
     </body>
 </html>
