--- a/nodedoc/handle/Sequelize-ORM/public/index.html
+++ b/nodedoc/handle/Sequelize-ORM/public/index.html
@@ -10,5 +10,20 @@
 <body>
     静态资源首页
 </body>
+<script>
+    jsonp('http://localhost:5008/extend/jsonp?callback=testJsonp')
+    function jsonp(url) {
+        const script = document.createElement('script')
+        script.src = url;
+        document.body.append(script)
+        script.onload = function () {
+            script.remove()
+        }
+    }
+    function testJsonp(data) {
+        console.log("jsonp 接收的数据：", data);
+
+    }
+</script>
 
 </html>
