--- a/nodedoc/handle/Sequelize-ORM/public/index.html
+++ b/nodedoc/handle/Sequelize-ORM/public/index.html
@@ -11,19 +11,45 @@
     静态资源首页
 </body>
 <script>
-    jsonp('http://localhost:5008/extend/jsonp?callback=testJsonp')
-    function jsonp(url) {
-        const script = document.createElement('script')
-        script.src = url;
-        document.body.append(script)
-        script.onload = function () {
-            script.remove()
-        }
-    }
-    function testJsonp(data) {
-        console.log("jsonp 接收的数据：", data);
+    // jsonp 
 
-    }
+    // jsonp('http://localhost:5008/extend/jsonp?callback=testJsonp')
+    // function jsonp(url) {
+    //     const script = document.createElement('script')
+    //     script.src = url;
+    //     document.body.append(script)
+    //     script.onload = function () {
+    //         script.remove()
+    //     }
+    // }
+    // function testJsonp(data) {
+    //     console.log("jsonp 接收的数据：", data);
+
+    // }
+
+    // 简单请求
+
+    // fetch("http://localhost:5008/api/student")
+    //     .then((resp) => resp.json())
+    //     .then((resp) => {
+    //         console.log(resp);
+    //     });
+
+    // 预检请求
+
+    fetch("http://localhost:5008/api/student", {
+        method: "POST",
+        headers: {
+            "content-type": "application/json",
+            a: 1,
+        },
+        // credentials: "include", // 这个打开，也就是附身份 access-control-allow-origin：* 是有问题的
+    })
+        .then((resp) => resp.json())
+        .then((resp) => {
+            console.log(resp);
+        });
+
 </script>
 
 </html>
