--- a/nodedoc/handle/Sequelize-ORM/public/case/uploadFile.html
+++ b/nodedoc/handle/Sequelize-ORM/public/case/uploadFile.html
@@ -23,11 +23,14 @@
 
     <input type="file" id="upFile" multiple />
     <button id="upButton">文件上传</button>
+    <img id="img">
 </body>
 <script>
     // 法案2 FormData 上传
     const btn = document.querySelector('#upButton')
     const fileInput = document.querySelector('#upFile')
+    const img = document.querySelector('#img')
+
 
     btn.onclick = function () {
         console.log(fileInput.files);
