--- a/nodedoc/handle/Sequelize-ORM/public/case/uploadFile.html
+++ b/nodedoc/handle/Sequelize-ORM/public/case/uploadFile.html
@@ -26,7 +26,7 @@
     <img id="img">
 </body>
 <script>
-    // 法案2 FormData 上传
+    // 方案2 FormData 上传
     const btn = document.querySelector('#upButton')
     const fileInput = document.querySelector('#upFile')
     const img = document.querySelector('#img')
